make agent compatible with java 8 JVMs